syntax = "proto3";

package proto;

option java_package = "com.hedera.hashgraph.sdk.proto";
option java_multiple_files = true;

import "BasicTypes.proto";

// See [ConsensusService.deleteTopic()](#proto.ConsensusService)
message ConsensusDeleteTopicTransactionBody {
    TopicID topicID = 1; // Topic identifier.
}
